# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import usersRouter from "./users";
+import companiesRouter from "./companies";
 import purchaseOrdersRouter from "./purchase-orders";
 import quotationsRouter from "./quotations";
 import invoicesRouter from "./invoices";
@@ -13,6 +14,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(authRouter);
 router.use(usersRouter);
+router.use(companiesRouter);
 router.use(purchaseOrdersRouter);
 router.use(quotationsRouter);
 router.use(invoicesRouter);
